[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Fonts/PixelFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/Styles/HoverButton.tres" type="StyleBox" id=2]
[ext_resource path="res://Resources/Styles/normalbutton.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Styles/pressedbutton.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/Battle/Control/WeaponController.gd" type="Script" id=5]
[ext_resource path="res://Resources/Styles/panel.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 90 ), Vector2( 20, 80 ), Vector2( 20, 60 ), Vector2( 20, 40 ), Vector2( 20, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpDownBtns2:custom_constants/separation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -20, -20, 40, 32 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpDownBtns:custom_constants/separation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -10, -10, 90, 84 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_weaponSelector_outspreded"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("NamePanel:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 10 ), Vector2( 15, -15 ) ]
}

[node name="WeaponController" type="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
sensitivity = 51.662

[node name="NamePanel" type="Panel" parent="."]
visible = false
margin_left = 15.0
margin_top = 10.0
margin_right = 125.0
margin_bottom = 24.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="NamePanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 107.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.2, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpDownBtns" type="HBoxContainer" parent="."]
margin_left = -8.0
margin_right = 148.0
margin_bottom = 30.0
rect_min_size = Vector2( 140, 25 )
custom_constants/separation = 90
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="Panel" parent="UpDownBtns"]
margin_left = 5.0
margin_right = 33.0
margin_bottom = 30.0
rect_min_size = Vector2( 28, 30 )
mouse_filter = 2
custom_styles/panel = ExtResource( 6 )

[node name="icon" type="Sprite" parent="UpDownBtns/UpButton"]
position = Vector2( 16, 15 )
scale = Vector2( 0.8, 0.8 )

[node name="DownButton" type="Panel" parent="UpDownBtns"]
margin_left = 123.0
margin_right = 151.0
margin_bottom = 30.0
rect_min_size = Vector2( 28, 30 )
mouse_filter = 2
custom_styles/panel = ExtResource( 6 )

[node name="icon" type="Sprite" parent="UpDownBtns/DownButton"]
position = Vector2( 12, 15 )
scale = Vector2( 0.8, 0.8 )

[node name="UpDownBtns2" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_right = 125.0
margin_bottom = 38.0
rect_min_size = Vector2( 98, 25 )
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="Panel" parent="UpDownBtns2"]
margin_left = 6.0
margin_right = 39.0
margin_bottom = 38.0
rect_min_size = Vector2( 33, 38 )
mouse_filter = 2
custom_styles/panel = ExtResource( 6 )

[node name="icon" type="Sprite" parent="UpDownBtns2/UpButton"]
position = Vector2( 19, 19 )

[node name="DownButton" type="Panel" parent="UpDownBtns2"]
margin_left = 71.0
margin_right = 104.0
margin_bottom = 38.0
rect_min_size = Vector2( 33, 38 )
mouse_filter = 2
custom_styles/panel = ExtResource( 6 )

[node name="icon" type="Sprite" parent="UpDownBtns2/DownButton"]
position = Vector2( 14, 19 )

[node name="WeaponIcon" type="Button" parent="."]
margin_left = 47.0
margin_right = 93.0
margin_bottom = 46.0
rect_min_size = Vector2( 46, 46 )
rect_pivot_offset = Vector2( 23, 23 )
mouse_filter = 1
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="WeaponIcon"]
position = Vector2( 23, 23 )
scale = Vector2( 1.3, 1.3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 2 )
[connection signal="pressed" from="WeaponIcon" to="." method="_on_WeaponIcon_pressed"]
